[gd_scene load_steps=8 format=3 uid="uid://bpwr61ayi2fxj"]

[ext_resource type="Script" path="res://Scripts/WorkCard.gd" id="1_0bhmr"]
[ext_resource type="Texture2D" uid="uid://bu7c1a68177br" path="res://Resources/Textures/Image.svg" id="1_iac10"]
[ext_resource type="PackedScene" uid="uid://ci8hbvggabgnh" path="res://Scenes/ImageUrlLoader.tscn" id="2_r22qk"]
[ext_resource type="SystemFont" uid="uid://cet1proxcxegx" path="res://Resources/Fonts/SystemFontMedium.tres" id="4_0tqyh"]
[ext_resource type="SystemFont" uid="uid://dnjetdjtsa8ww" path="res://Resources/Fonts/SystemFontLight.tres" id="5_q85ay"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q7xnc"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m5j0x"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="WorkCard" type="PanelContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(150, 216)
offset_right = 150.0
offset_bottom = 215.0
theme_override_styles/panel = SubResource("StyleBoxFlat_q7xnc")
script = ExtResource("1_0bhmr")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Mask" type="PanelContainer" parent="VBoxContainer"]
clip_children = 1
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_m5j0x")

[node name="PreviewTexture" parent="VBoxContainer/Mask" instance=ExtResource("2_r22qk")]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("1_iac10")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = -8

[node name="WorkNameLabel" type="Label" parent="VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.0627451, 0.0627451, 0.0627451, 1)
theme_override_fonts/font = ExtResource("4_0tqyh")
theme_override_font_sizes/font_size = 20
text = "WorkName"
horizontal_alignment = 1
vertical_alignment = 2
text_overrun_behavior = 3

[node name="DescriptionLabel" type="Label" parent="VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0.490196)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.0627451, 0.0627451, 0.0627451, 1)
theme_override_constants/line_spacing = -7
theme_override_fonts/font = ExtResource("5_q85ay")
text = "Description"
horizontal_alignment = 1
autowrap_mode = 2
text_overrun_behavior = 3

[connection signal="pressed" from="VBoxContainer/Mask/PreviewTexture" to="." method="_on_preview_texture_pressed"]
